--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Server Slayer is a simple game based on the popularity of the Among Us game.",
   "main": "index.js",
   "scripts": {
+    "auth": "nodemon middleware/",
     "test": "jest --verbose --coverage",
     "start": "node server/index.js",
     "dev": "nodemon server/index.js",
