--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
   "license": "ISC",
   "dependencies": {
     "base-64": "^1.0.0",
+    "basic-auth": "^2.0.1",
+    "basicauth": "^0.0.1",
     "bcrypt": "^5.1.0",
     "chance": "^1.1.11",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.15.0",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.0.1",
+    "mongodb": "^5.3.0",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "prompt-sync": "^4.2.0",
-    "sequelize": "^6.31.0",
+    "sequelize": "^6.31.1",
     "sequelize-cli": "^6.6.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
