basic bearer working

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,5 @@
 PORT=3001
 SERVER_URL=http://localhost:3001
+DATABASE_URL=sqlite:memory
+SECRET = process.env.SECRET || 'HIDE FROM ME'
+NODE_ENV=test
