--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chance": "^1.1.11",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint": "^8.39.0",
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
