--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "basic-auth": "^2.0.1",
     "basicauth": "^0.0.1",
     "bcrypt": "^5.1.0",
+    "chai": "^4.3.7",
     "chance": "^1.1.11",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -36,5 +37,8 @@
     "socket.io-client": "^4.6.1",
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3"
+  },
+  "devDependencies": {
+    "sequelize-test-helpers": "^1.4.3"
   }
 }
